fix flex alignes in news__block

--- a/app/sass/_news.sass
+++ b/app/sass/_news.sass
@@ -37,6 +37,7 @@
       flex-direction: column
       align-items: flex-start
       justify-content: flex-start
+      max-width: 300px
 
 @media (max-width: 960px)
   .news
